Created bolognese recipe
Added image, paragraphs, lists to bolognese page

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -7,5 +7,38 @@
 </head>
 <body>
     <h1>Bolognese</h1>
+    <img src="https://www.allrecipes.com/thmb/jGeZ6426d2FT90f09y53_c1Oj54=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2433171-bolognese-sauce-Allrecipes-Magazine-1x1-1-91e4bb43a13b42b6b2eddff2c82e59ec.jpg" 
+    alt="Picture of bolognese" height="100">
+    <h2>Description</h2>
+    <p>This is the super <strong>easy</strong> recipe for the bolognese I make on a weekly basis when I don't have much time</p>
+    <p>Creates about 4 servings and takes 20-30 mins</p>
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>Dolmio sauce (one jar)</li>
+        <li>500g mince beef</li>
+        <li>Any pasta (enough for 4 people)</li>
+        <li>1 onion</li>
+        <li>2 garlic cloves (can add more)</li>
+        <li>Worcester sauce</li>
+        <li>Cumin</li>
+        <li>Corriander</li>
+        <li>Salt and pepper</li>
+        <li>Cheese</li>
+    </ul>
+    <h3>Optional:</h3>
+    <ul>
+        <li>Fresh basil</li>
+        <li>Carrot</li>
+        <li>Spinach</li>
+    </ul>
+    <h2>Method:</h2>
+    <ol>
+        <li>Start boiling pasta (salted water)</li>
+        <li>Fry onions for 3-4 mins, add crushed garlic for 1 min (add carrot at the same time as onion if using it)</li>
+        <li>Add beef, break up nicely and mix with onions etc. Soon as mixed, add the spices and Worcester sauce</li>
+        <li>Once beef browned completely add Dolmio sauce. Stir and watch until pasta is cooked (at least 5 mins, can be left as long as needed)</li>
+        <li>Apparently can add dark chocolate whilst sauce is being done!</li>
+        <li>Serve on pasta with grated cheese on top</li>
+    </ol>
 </body>
 </html>
